Fix tables' symmetry + draft scenarios layout fixes

--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -156,7 +156,7 @@ During this Scenario:
   \newcommand{\golden}[0]{\svgunit[12]{golden}}
   \newcommand{\azure}[0]{\svgunit[12]{azure}}
 
-  \begin{tabularx}{\linewidth}{XXXX}
+  \begin{tabularx}{0.95\linewidth}{XXXX}
   \darkcell{\raisebox{-.2\height}{\svgunit[20]{bronze}} \textbf{Easy}} &
   \darkcell{\raisebox{-.2\height}{\svgunit[20]{silver}} \textbf{Normal}} &
   \darkcell{\raisebox{-.2\height}{\svgunit[20]{golden}} \textbf{Hard}} &
@@ -221,7 +221,7 @@ During this Scenario:
   \newcommand{\golden}[0]{\svgunit[12]{golden}}
   \newcommand{\azure}[0]{\svgunit[12]{azure}}
 
-  \begin{tabularx}{\linewidth}{XXXX}
+  \begin{tabularx}{0.95\linewidth}{XXXX}
   \darkcell{\raisebox{-.2\height}{\svgunit[20]{bronze}} \textbf{Easy}} &
   \darkcell{\raisebox{-.2\height}{\svgunit[20]{silver}} \textbf{Normal}} &
   \darkcell{\raisebox{-.2\height}{\svgunit[20]{golden}} \textbf{Hard}} &
@@ -285,7 +285,7 @@ During this Scenario:
   \newcommand{\golden}[0]{\svgunit[12]{golden}}
   \newcommand{\azure}[0]{\svgunit[12]{azure}}
 
-  \begin{tabularx}{\linewidth}{XXXX}
+  \begin{tabularx}{0.95\linewidth}{XXXX}
   \darkcell{\raisebox{-.2\height}{\svgunit[20]{bronze}} \textbf{Easy}} &
   \darkcell{\raisebox{-.2\height}{\svgunit[20]{silver}} \textbf{Normal}} &
   \darkcell{\raisebox{-.2\height}{\svgunit[20]{golden}} \textbf{Hard}} &
@@ -357,7 +357,7 @@ During this Scenario:
   \newcommand{\golden}[0]{\svgunit[12]{golden}}
   \newcommand{\azure}[0]{\svgunit[12]{azure}}
 
-  \begin{tabularx}{\linewidth}{XXXX}
+  \begin{tabularx}{0.95\linewidth}{XXXX}
   \darkcell{\raisebox{-.2\height}{\svgunit[20]{bronze}} \textbf{Easy}} &
   \darkcell{\raisebox{-.2\height}{\svgunit[20]{silver}} \textbf{Normal}} &
   \darkcell{\raisebox{-.2\height}{\svgunit[20]{golden}} \textbf{Hard}} &
