--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -129,7 +129,7 @@ There are undefeated Units left in the Titans' Stronghold at the end of Round 16
   \newcommand{\golden}[0]{\svg[12]{golden}}
   \newcommand{\azure}[0]{\svg[12]{azure}}
 
-  \begin{tabularx}{\linewidth}{p{0.15\linewidth}XXXX} & \darkcell{Easy} & \darkcell{Normal} & \darkcell{Hard} & \darkcell{Impossible}\\
+  \begin{tabularx}{0.95\linewidth}{p{0.15\linewidth}XXXX} & \darkcell{Easy} & \darkcell{Normal} & \darkcell{Hard} & \darkcell{Impossible}\\
   \darkcell[1.2]{1 player}
     & \lightcell[1.2]{3\bronze 2\silver 1\golden 1\azure}
     & \lightcell[1.2]{2\bronze 2\silver 2\golden 1\azure}
@@ -150,7 +150,7 @@ There are undefeated Units left in the Titans' Stronghold at the end of Round 16
       Then\linebreak
       1\bronze 4\silver 5\golden 3\azure}\\
   \darkcell[1.8]{4 players}
-    & \lightcell[1.8]{10\bronze 10\silver 6\golden 2\azure}
+    & \lightcell[1.8]{10\bronze 10\silver\linebreak 6\golden 2\azure}
     & \lightcell[1.8]{8\bronze 10\silver 6\golden 4\azure}
     & \lightcell[1.8]{2\bronze 5\silver 5\golden 3\azure \linebreak
       Then\linebreak
