--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -5,8 +5,6 @@
 
 \textbf{Author:} Kelghor
 
-\textbf{Version:} 1.6
-
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1313651865648369725}{Archon Studio Discord}
 
 \textit{``Sir! The raiders are at our gates!''}
@@ -33,7 +31,7 @@ This Scenario is played over 7 Rounds.
   \item  1 × A Few \svgunit{bronze} Units of your choice
 \end{itemize}
 
-\textbf{Town Buildings:} \svgunit{bronze} Dwelling.
+\textbf{Town Buildings:} \svgunit{bronze} Dwelling
 
 \subsection*{\MakeUppercase{Map Setup}}
 
@@ -143,13 +141,22 @@ Prepare an AI Deck for Settlement defenders.
 \columnbreak
 
 \vspace*{\fill}
+\begin{center}
+  \includegraphics[width=\linewidth]{\maps/close_to_enemies_p1.png}
+  \captionof{figure}{\textbf{1-PLAYER SCENARIO | EXAMPLE }}
+\end{center}
+\vspace*{\fill}
 
 \end{multicols}
 
-\vspace{2em}
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=0.75\linewidth]{\maps/close_to_enemies_p2.png}
+  \captionof{figure}{\textbf{2-PLAYER SCENARIO | EXAMPLE }}
+\end{figure}
 
-\begin{center}
-  \hommtable[]{16}{
+\begin{table*}[b!]
+  \hommtable[]{18}{
     \centering
     \medskip
     \textbf{Enemy Clan Armies}\\
@@ -160,7 +167,7 @@ Prepare an AI Deck for Settlement defenders.
     \newcommand{\golden}[0]{\svgunit[12]{golden}}
     \newcommand{\azure}[0]{\svgunit[12]{azure}}
 
-      \begin{tabularx}{\linewidth}{p{0.2\linewidth}XXXX} &
+      \begin{tabularx}{0.95\linewidth}{p{0.2\linewidth}XXXX} &
       \darkcell{\textbf{Easy}} &
       \darkcell{\textbf{Normal}} &
       \darkcell{\textbf{Hard}} &
@@ -191,45 +198,37 @@ Prepare an AI Deck for Settlement defenders.
 
       \end{tabularx}
   }
-\end{center}
+\end{table*}
 
-\vspace{2em}
 
 \begin{center}
-  \begin{figure}[h!]
+  \vspace*{\fill}
+  \begin{figure}
     \centering
-    \captionof{figure}{\textbf{1-PLAYER SCENARIO | EXAMPLE }}
-    \includegraphics[width=0.68\paperwidth]{\maps/close_to_enemies_p1.png}
-  \end{figure}
-%   \vspace{2em}
-  \begin{figure}[h!]
-    \centering
-    \captionof{figure}{\textbf{2-PLAYER SCENARIO | EXAMPLE }}
-    \includegraphics[width=0.68\paperwidth]{\maps/close_to_enemies_p2.png}
-  \end{figure}
-%   \vspace{2em}
-  \begin{figure}[h!]
-    \centering
-    \captionof{figure}{\textbf{3-PLAYER SCENARIO | EXAMPLE}}
     \includegraphics[width=0.75\paperwidth]{\maps/close_to_enemies_p3.png}
+    \captionof{figure}{\textbf{3-PLAYER SCENARIO | EXAMPLE}}
   \end{figure}
-%   \vspace{2em}
-  \begin{figure}[h!]
+  \vspace*{\fill}
+  \begin{figure}
     \centering
-    \captionof{figure}{\textbf{4-PLAYER SCENARIO | EXAMPLE}}
     \includegraphics[width=0.85\paperwidth]{\maps/close_to_enemies_p4.png}
+    \captionof{figure}{\textbf{4-PLAYER SCENARIO | EXAMPLE}}
   \end{figure}
-%   \vspace{2em}
-  \begin{figure}[h!]
-    \centering
-    \captionof{figure}{\textbf{5-PLAYER SCENARIO | EXAMPLE}}
-    \includegraphics[width=0.75\paperwidth]{\maps/close_to_enemies_p5.png}
-  \end{figure}
-%   \vspace{2em}
-  \begin{figure}[h!]
-    \centering
-    \captionof{figure}{\textbf{6-PLAYER SCENARIO | EXAMPLE}}
-    \includegraphics[width=0.75\paperwidth]{\maps/close_to_enemies_p6.png}
-  \end{figure}
+  \vspace*{\fill}
+\end{center}
 
+\begin{center}
+  \vspace*{\fill}
+  \begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.75\paperwidth]{\maps/close_to_enemies_p5.png}
+    \captionof{figure}{\textbf{5-PLAYER SCENARIO | EXAMPLE}}
+  \end{figure}
+  \vspace{5em}
+  \begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.75\paperwidth]{\maps/close_to_enemies_p6.png}
+    \captionof{figure}{\textbf{6-PLAYER SCENARIO | EXAMPLE}}
+  \end{figure}
+  \vspace*{\fill}
 \end{center}
