--- a/translations/the_hunt.tex/de.po
+++ b/translations/the_hunt.tex/de.po
@@ -359,7 +359,7 @@ msgid ""
 "\\hommtable[]{8}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
-"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"{\\svgunit[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
 "& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
@@ -415,7 +415,7 @@ msgid ""
 "\\hommtable[]{10}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
-"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"{\\svgunit[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
 "& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
@@ -470,7 +470,7 @@ msgid ""
 "\\hommtable[]{9}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
-"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"{\\svgunit[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
 "& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
@@ -529,7 +529,7 @@ msgid ""
 "\\hommtable[]{7}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
-"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"{\\svgunit[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
 "& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
