--- a/translations/the_hunt.tex/pl.po
+++ b/translations/the_hunt.tex/pl.po
@@ -487,7 +487,7 @@ msgid ""
 "\\hommtable[]{8}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
-"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"{\\svgunit[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
 "& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
@@ -503,7 +503,7 @@ msgstr ""
 "\\hommtable[]{8}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
-"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"{\\svgunit[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Łatwy}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} "
 "\\textbf{Normalny}} & \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]"
@@ -586,7 +586,7 @@ msgid ""
 "\\hommtable[]{10}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
-"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"{\\svgunit[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
 "& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
@@ -602,7 +602,7 @@ msgstr ""
 "\\hommtable[]{10}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
-"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"{\\svgunit[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Łatwy}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} "
 "\\textbf{Normalny}} & \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]"
@@ -682,7 +682,7 @@ msgid ""
 "\\hommtable[]{9}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
-"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"{\\svgunit[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
 "& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
@@ -697,7 +697,7 @@ msgstr ""
 "\\hommtable[]{9}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
-"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"{\\svgunit[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Łatwy}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} "
 "\\textbf{Normalny}} & \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]"
@@ -786,7 +786,7 @@ msgid ""
 "\\hommtable[]{7}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
-"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"{\\svgunit[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
 "& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
@@ -801,7 +801,7 @@ msgstr ""
 "\\hommtable[]{7}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
-"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"{\\svgunit[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Łatwy}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} "
 "\\textbf{Normalny}} & \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]"
