--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -163,7 +163,7 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
   \newcommand{\golden}[0]{\svgunit[12]{golden}}
   \newcommand{\azure}[0]{\svgunit[12]{azure}}
 
-  \begin{tabularx}{\linewidth}{p{0.15\linewidth}XXXX} & \darkcell{Rounds 6 + 7} & \darkcell{Rounds 8 + 9} & \darkcell{Round 10}\\
+  \begin{tabularx}{0.95\linewidth}{p{0.15\linewidth}XXXX} & \darkcell{Rounds 6 + 7} & \darkcell{Rounds 8 + 9} & \darkcell{Round 10}\\
   \darkcell[1.4]{Easy}
     & \lightcell[1.4]{\bronze \silver \silver \silver \golden}
     & \lightcell[1.4]{\silver \silver \silver \golden \golden}
