--- a/draft-scenarios/clash/treasure_island.tex
+++ b/draft-scenarios/clash/treasure_island.tex
@@ -14,7 +14,7 @@
 This Scenario plays out over 12 Rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
-\textbf{Player Count:} 2 to 6
+\textbf{Player Count:} 2--6
 
 \textbf{Starting Resources:} 10 \svg{gold}, 3 \svg{building_materials}, 1 \svg{valuables}
 
@@ -34,49 +34,20 @@ This Scenario plays out over 12 Rounds.
 
 \textbf{Additional Bonus:} Each player may gain a War Machine of their choice at no cost.
 
+\vspace*{\fill}
+\columnbreak
+
 \subsection*{\MakeUppercase{Map Setup}}
 
-Take the following Map Tiles and arrange them as shown in the Scenario map layout:
+Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):
 
-\textbf{For a 2-player Scenario:}
 \begin{itemize}
-  \item 2 × Starting (I) Map Tile
-  \item 3 × Near (IV--V) Map Tile, all of which must contain an Obelisk
-  \item 9 × Far (II--III) Map Tile
+  \item P × Starting (I) Map Tile
+  \item (P + 1) × Near (IV--V) Map Tile, all of which must contain an Obelisk
+  \item (2P + 5) × Far (II--III) Map Tile
   \item 1 × Center (VI--VII) Map Tile, which must contain the Dragon Utopia
 \end{itemize}
 
-\textbf{For a 3-player Scenario:}
-\begin{itemize}
-  \item 3 × Starting (I) Map Tile
-  \item 4 × Near (IV--V) Map Tile, all of which must contain an Obelisk
-  \item 11 × Far (II--III) Map Tile
-  \item 1 × Center (VI--VII) Map Tile, which must contain the Dragon Utopia
-\end{itemize}
-
-\textbf{For a 4-player Scenario:}
-\begin{itemize}
-  \item 4 × Starting (I) Map Tile
-  \item 5 × Near (IV--V) Map Tile, all of which must contain an Obelisk
-  \item 13 × Far (II--III) Map Tile
-  \item 1 × Center (VI--VII) Map Tile, which must contain the Dragon Utopia
-\end{itemize}
-
-\textbf{For a 5-player Scenario:}
-\begin{itemize}
-  \item 5 × Starting (I) Map Tile
-  \item 6 × Near (IV--V) Map Tile, all of which must contain an Obelisk
-  \item 15 × Far (II--III) Map Tile
-  \item 1 × Center (VI--VII) Map Tile, which must contain the Dragon Utopia
-\end{itemize}
-
-\textbf{For a 6-player Scenario:}
-\begin{itemize}
-  \item 6 × Starting (I) Map Tile
-  \item 7 × Near (IV--V) Map Tile, all of which must contain an Obelisk
-  \item 17 × Far (II--III) Map Tile
-  \item 1 × Center (VI--VII) Map Tile, which must contain the Dragon Utopia
-\end{itemize}
 
 \textbf{\MakeUppercase{Note:}} The only island without a Starting (I) Map Tile is Treasure Island. The central Tile of Treasure Island begins the game face up as shown in the Scenario map layout - it should be a Near (IV--V) Map Tile with an Obelisk in the center (ignore the Map Tile shown in the diagram).
 
@@ -110,7 +81,7 @@ If there are three or more Players remainings at the end of \nth{12} Round, all 
 During this Scenario:
 
 \begin{itemize}
-  \item When a player Visits an Obelisk, they may choose to teleport to any other revealed Obelisk. If an Obelisk is not visible, it cannot be teleported to. Teleporting does not cost any \svg{movement}.
+  \item When a player Visits an Obelisk, they may choose to teleport to any other revealed Obelisk. If an Obelisk is not visible, it cannot be teleported to. Teleporting does not cost any \svgeven{movement}.
   \item Travel between islands is not possible other than Obelisks; e.g. Dimension Door, Angel Wings, and similar effects may not be used to travel between islands.
   \item Place a Black Cube on all empty Fields on Treasure Island as Tiles are revealed. The first Hero to visit an empty Field with a Black Cube may remove the Black Cube in order to roll 1 \svg{treasure} or 1 \svg{resource}.
   \item The first time a Player defeats the Dragon Utopia in Neutral Combat, they may Recruit any defeated Neutral Unit for half its Recruitment cost. Place a Faction Cube on the Dragon Utopia to indicate Players that have taken this action.
@@ -119,36 +90,25 @@ During this Scenario:
   \item If a Player captures an Enemy Player's Starting Town, treat it as a Settlement; you may gain the same bonus as capturing a Settlement, but may not use the Walls, Gate, or Arrow Tower Cards if defending that Field.
 \end{itemize}
 
-\vspace*{\fill}
+\begin{center}
+  \vfill
+  \includegraphics[width=0.8\linewidth]{\maps/TreasureIsland_2p.png}
+  \captionof{figure}{\textbf{2-PLAYER SCENARIO}}
+  \vfill
+  \includegraphics[width=\linewidth]{\maps/TreasureIsland_3p.png}
+  \captionof{figure}{\textbf{3-PLAYER SCENARIO}}
+  \vfill
+\end{center}
 
 \end{multicols*}
 
-\begin{minipage}{0.4\paperwidth}
-  \centering
-  \includegraphics[width=0.18\paperwidth]{\maps/TreasureIsland_2p.png}
-  \captionof{figure}{\textbf{2-PLAYER SCENARIO}}
-\end{minipage}
-\begin{minipage}{0.4\paperwidth}
-  \centering
-  \includegraphics[width=0.36\paperwidth]{\maps/TreasureIsland_3p.png}
-  \captionof{figure}{\textbf{3-PLAYER SCENARIO}}
-\end{minipage}
-\vspace{1em}
-\linebreak
-\begin{minipage}{0.4\paperwidth}
-  \centering
-  \includegraphics[width=0.38\paperwidth]{\maps/TreasureIsland_4p.png}
+\begin{center}
+  \includegraphics[width=0.8\linewidth]{\maps/TreasureIsland_4p.png}
   \captionof{figure}{\textbf{4-PLAYER SCENARIO}}
-\end{minipage}
-\begin{minipage}{0.4\paperwidth}
-  \centering
-  \includegraphics[width=0.38\paperwidth]{\maps/TreasureIsland_5p.png}
+  \vfill
+  \includegraphics[width=0.8\linewidth]{\maps/TreasureIsland_5p.png}
   \captionof{figure}{\textbf{5-PLAYER SCENARIO}}
-\end{minipage}
-\vspace{1em}
-\linebreak
-\begin{minipage}{0.4\paperwidth}
-  \centering
-  \includegraphics[width=0.38\paperwidth]{\maps/TreasureIsland_6p.png}
+  \vfill
+  \includegraphics[width=0.8\linewidth]{\maps/TreasureIsland_6p.png}
   \captionof{figure}{\textbf{6-PLAYER SCENARIO}}
-\end{minipage}
+\end{center}
