--- a/translations/sentinels.tex/pl.po
+++ b/translations/sentinels.tex/pl.po
@@ -623,7 +623,7 @@ msgid ""
 "\\ \\bigskip \\newcommand{\\bronze}[0]{\\svgunit[12]{bronze}} "
 "\\newcommand{\\silver}[0]{\\svgunit[12]{silver}} \\newcommand{\\golden}[0]"
 "{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]{\\svgunit[12]{azure}} "
-"\\begin{tabularx}{\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Rounds 6 "
+"\\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Rounds 6 "
 "+ 7} & \\darkcell{Rounds 8 + 9} & \\darkcell{Round 10}\\\\ \\darkcell[1.4]"
 "{Easy} & \\lightcell[1.4]{\\bronze \\silver \\silver \\silver \\golden} & "
 "\\lightcell[1.4]{\\silver \\silver \\silver \\golden \\golden} & "
@@ -646,7 +646,7 @@ msgstr ""
 "\\bigskip \\newcommand{\\bronze}[0]{\\svgunit[12]{bronze}} "
 "\\newcommand{\\silver}[0]{\\svgunit[12]{silver}} \\newcommand{\\golden}[0]"
 "{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]{\\svgunit[12]{azure}} "
-"\\begin{tabularx}{\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Rundy 6 "
+"\\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Rundy 6 "
 "+ 7} & \\darkcell{Rundy 8 + 9} & \\darkcell{Runda 10}\\\\ \\darkcell[1.4]"
 "{Łatwy} & \\lightcell[1.4]{\\bronze \\silver \\silver \\silver \\golden} & "
 "\\lightcell[1.4]{\\silver \\silver \\silver \\golden \\golden} & "
