--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -476,7 +476,7 @@ msgid ""
 "\\hommtable[]{8}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
-"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"{\\svgunit[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
 "& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
@@ -492,7 +492,7 @@ msgstr ""
 "\\hommtable[]{8}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
-"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"{\\svgunit[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Lehká}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} "
 "\\textbf{Normalní}} & \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]"
@@ -571,7 +571,7 @@ msgid ""
 "\\hommtable[]{10}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
-"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"{\\svgunit[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
 "& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
@@ -587,7 +587,7 @@ msgstr ""
 "\\hommtable[]{10}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
-"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"{\\svgunit[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Lehká}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} "
 "\\textbf{Normální}} & \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]"
@@ -666,7 +666,7 @@ msgid ""
 "\\hommtable[]{9}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
-"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"{\\svgunit[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
 "& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
@@ -681,7 +681,7 @@ msgstr ""
 "\\hommtable[]{9}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
-"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"{\\svgunit[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Lehká}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} "
 "\\textbf{Normální}} & \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]"
@@ -766,7 +766,7 @@ msgid ""
 "\\hommtable[]{7}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
-"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"{\\svgunit[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} \\textbf{Normal}} "
 "& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{golden}} \\textbf{Hard}} "
@@ -781,7 +781,7 @@ msgstr ""
 "\\hommtable[]{7}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
 "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
-"{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
+"{\\svgunit[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{XXXX} "
 "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Snadné}} "
 "& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} "
 "\\textbf{Normální}} & \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]"
