--- a/translations/titans_stronghold.tex/cs.po
+++ b/translations/titans_stronghold.tex/cs.po
@@ -495,51 +495,6 @@ msgstr ""
 
 #. type: Plain text
 #: coops/titans_stronghold.tex:189
-#, fuzzy
-#| msgid ""
-#| "\\hommtable[]{28}{ \\centering \\medskip \\textbf{Strength of Titans' "
-#| "Stronghold Armies}\\\\ \\bigskip \\newcommand{\\bronze}[0]{\\svg[12]"
-#| "{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} "
-#| "\\newcommand{\\golden}[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]"
-#| "{\\svg[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}"
-#| "XXXX} & \\darkcell{Easy} & \\darkcell{Normal} & \\darkcell{Hard} & "
-#| "\\darkcell{Impossible}\\\\ \\darkcell[1.2]{1 player} & \\lightcell[1.2]"
-#| "{3\\bronze 2\\silver 1\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze "
-#| "2\\silver 2\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze 2\\silver "
-#| "2\\golden 2\\azure} & \\lightcell[1.2]{1\\bronze 2\\silver 2\\golden "
-#| "3\\azure}\\\\ \\darkcell[1.2]{2 players} & \\lightcell[1.2]{5\\bronze "
-#| "5\\silver 3\\golden 1\\azure} & \\lightcell[1.2]{4\\bronze 5\\silver "
-#| "3\\golden 2\\azure} & \\lightcell[1.2]{2\\bronze 5\\silver 5\\golden "
-#| "3\\azure} & \\lightcell[1.2]{1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ "
-#| "\\darkcell[1.8]{3 players} & \\lightcell[1.8]{8\\bronze 7\\silver "
-#| "4\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze 7\\silver 5\\golden "
-#| "3\\azure} & \\lightcell[1.8]{2\\bronze 3\\silver 4\\golden 3\\azure "
-#| "\\linebreak Then\\linebreak 2\\bronze 4\\silver 3\\golden 2\\azure} & "
-#| "\\lightcell[1.8]{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak "
-#| "Then\\linebreak 1\\bronze 4\\silver 5\\golden 3\\azure}\\\\ "
-#| "\\darkcell[1.8]{4 players} & \\lightcell[1.8]{10\\bronze 10\\silver "
-#| "6\\golden 2\\azure} & \\lightcell[1.8]{8\\bronze 10\\silver 6\\golden "
-#| "4\\azure} & \\lightcell[1.8]{2\\bronze 5\\silver 5\\golden 3\\azure "
-#| "\\linebreak Then\\linebreak 2\\bronze 5\\silver 5\\golden 3\\azure} & "
-#| "\\lightcell[1.8]{1\\bronze 5\\silver 7\\golden 4\\azure \\linebreak "
-#| "Then\\linebreak 1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ "
-#| "\\darkcell[1.8]{5 players} & \\lightcell[1.8]{6\\bronze 6\\silver "
-#| "4\\golden 1\\azure \\linebreak Then\\linebreak 7\\bronze 6\\silver "
-#| "3\\golden 2\\azure} & \\lightcell[1.8]{5\\bronze 6\\silver 4\\golden "
-#| "2\\azure \\linebreak Then\\linebreak 5\\bronze 6\\silver 4\\golden "
-#| "3\\azure} & \\lightcell[1.8]{3\\bronze 6\\silver 6\\golden 4\\azure "
-#| "\\linebreak Then\\linebreak 3\\bronze 6\\silver 6\\golden 4\\azure} & "
-#| "\\lightcell[1.8]{1\\bronze 6\\silver 8\\golden 6\\azure \\linebreak "
-#| "Then\\linebreak 2\\bronze 6\\silver 8\\golden 5\\azure}\\\\ "
-#| "\\darkcell[1.7]{6 players} & \\lightcell[1.8]{8\\bronze 8\\silver "
-#| "4\\golden 1\\azure \\linebreak Then\\linebreak 7\\bronze 7\\silver "
-#| "5\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden "
-#| "3\\azure \\linebreak Then\\linebreak 6\\bronze 7\\silver 5\\golden "
-#| "3\\azure} & \\lightcell[1.8]{3\\bronze 8\\silver 7\\golden 5\\azure "
-#| "\\linebreak Then\\linebreak 3\\bronze 7\\silver 8\\golden 4\\azure} & "
-#| "\\lightcell[1.8]{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak "
-#| "Then\\linebreak 3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ "
-#| "\\end{tabularx} }"
 msgid ""
 "\\hommtable[]{28}{ \\centering \\medskip \\textbf{Strength of Titans' "
 "Stronghold Armies}\\\\ \\bigskip \\newcommand{\\bronze}[0]{\\svg[12]"
@@ -603,7 +558,7 @@ msgstr ""
 "3\\golden 2\\azure} & \\lightcell[1.8]{1\\bronze 3\\silver 5\\golden "
 "3\\azure \\linebreak Poté\\linebreak 1\\bronze 4\\silver 5\\golden "
 "3\\azure}\\\\ \\darkcell[1.8]{4 hráči} & \\lightcell[1.8]{10\\bronze "
-"10\\silver 6\\golden 2\\azure} & \\lightcell[1.8]{8\\bronze 10\\silver "
+"10\\silver \\linebreak 6\\golden 2\\azure} & \\lightcell[1.8]{8\\bronze 10\\silver "
 "6\\golden 4\\azure} & \\lightcell[1.8]{2\\bronze 5\\silver 5\\golden "
 "3\\azure \\linebreak Poté\\linebreak 2\\bronze 5\\silver 5\\golden 3\\azure} "
 "& \\lightcell[1.8]{1\\bronze 5\\silver 7\\golden 4\\azure \\linebreak "
