Fix tables' symmetry + draft scenarios layout fixes (#172)
Co-authored-by: github-actions <github-actions@github.com>

--- a/translations/titans_stronghold.tex/fr.po
+++ b/translations/titans_stronghold.tex/fr.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-01-14 11:51+0000\n"
+"POT-Creation-Date: 2025-03-12 22:04+0000\n"
 "PO-Revision-Date: 2024-11-01 11:30+0000\n"
 "Last-Translator: qwrtln <qwrtln@users.noreply.hosted.weblate.org>\n"
 "Language-Team: French <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -27,7 +27,7 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:5
 #: campaigns/castle_greek_gift.tex:6 campaigns/castle_greek_gift.tex:85
 #: campaigns/castle_greek_gift.tex:135 campaigns/castle_sicilian_dragon.tex:5
-#: campaigns/castle_sicilian_dragon.tex:149
+#: campaigns/castle_sicilian_dragon.tex:144
 #: campaigns/castle_two_knights_defense.tex:5
 #: campaigns/castle_two_knights_defense.tex:91
 #: campaigns/castle_two_knights_defense.tex:129 sections/what_to_play.tex:5
@@ -483,90 +483,135 @@ msgstr ""
 
 #. type: Plain text
 #: coops/titans_stronghold.tex:189
+#, fuzzy
+#| msgid ""
+#| "\\hommtable[]{28}{ \\centering \\medskip \\textbf{Strength of Titans' "
+#| "Stronghold Armies}\\\\ \\bigskip \\newcommand{\\bronze}[0]{\\svg[12]"
+#| "{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} "
+#| "\\newcommand{\\golden}[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]"
+#| "{\\svg[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}"
+#| "XXXX} & \\darkcell{Easy} & \\darkcell{Normal} & \\darkcell{Hard} & "
+#| "\\darkcell{Impossible}\\\\ \\darkcell[1.2]{1 player} & \\lightcell[1.2]"
+#| "{3\\bronze 2\\silver 1\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze "
+#| "2\\silver 2\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze 2\\silver "
+#| "2\\golden 2\\azure} & \\lightcell[1.2]{1\\bronze 2\\silver 2\\golden "
+#| "3\\azure}\\\\ \\darkcell[1.2]{2 players} & \\lightcell[1.2]{5\\bronze "
+#| "5\\silver 3\\golden 1\\azure} & \\lightcell[1.2]{4\\bronze 5\\silver "
+#| "3\\golden 2\\azure} & \\lightcell[1.2]{2\\bronze 5\\silver 5\\golden "
+#| "3\\azure} & \\lightcell[1.2]{1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ "
+#| "\\darkcell[1.8]{3 players} & \\lightcell[1.8]{8\\bronze 7\\silver "
+#| "4\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze 7\\silver 5\\golden "
+#| "3\\azure} & \\lightcell[1.8]{2\\bronze 3\\silver 4\\golden 3\\azure "
+#| "\\linebreak Then\\linebreak 2\\bronze 4\\silver 3\\golden 2\\azure} & "
+#| "\\lightcell[1.8]{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak "
+#| "Then\\linebreak 1\\bronze 4\\silver 5\\golden 3\\azure}\\\\ "
+#| "\\darkcell[1.8]{4 players} & \\lightcell[1.8]{10\\bronze 10\\silver "
+#| "6\\golden 2\\azure} & \\lightcell[1.8]{8\\bronze 10\\silver 6\\golden "
+#| "4\\azure} & \\lightcell[1.8]{2\\bronze 5\\silver 5\\golden 3\\azure "
+#| "\\linebreak Then\\linebreak 2\\bronze 5\\silver 5\\golden 3\\azure} & "
+#| "\\lightcell[1.8]{1\\bronze 5\\silver 7\\golden 4\\azure \\linebreak "
+#| "Then\\linebreak 1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ "
+#| "\\darkcell[1.8]{5 players} & \\lightcell[1.8]{6\\bronze 6\\silver "
+#| "4\\golden 1\\azure \\linebreak Then\\linebreak 7\\bronze 6\\silver "
+#| "3\\golden 2\\azure} & \\lightcell[1.8]{5\\bronze 6\\silver 4\\golden "
+#| "2\\azure \\linebreak Then\\linebreak 5\\bronze 6\\silver 4\\golden "
+#| "3\\azure} & \\lightcell[1.8]{3\\bronze 6\\silver 6\\golden 4\\azure "
+#| "\\linebreak Then\\linebreak 3\\bronze 6\\silver 6\\golden 4\\azure} & "
+#| "\\lightcell[1.8]{1\\bronze 6\\silver 8\\golden 6\\azure \\linebreak "
+#| "Then\\linebreak 2\\bronze 6\\silver 8\\golden 5\\azure}\\\\ "
+#| "\\darkcell[1.7]{6 players} & \\lightcell[1.8]{8\\bronze 8\\silver "
+#| "4\\golden 1\\azure \\linebreak Then\\linebreak 7\\bronze 7\\silver "
+#| "5\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden "
+#| "3\\azure \\linebreak Then\\linebreak 6\\bronze 7\\silver 5\\golden "
+#| "3\\azure} & \\lightcell[1.8]{3\\bronze 8\\silver 7\\golden 5\\azure "
+#| "\\linebreak Then\\linebreak 3\\bronze 7\\silver 8\\golden 4\\azure} & "
+#| "\\lightcell[1.8]{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak "
+#| "Then\\linebreak 3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ "
+#| "\\end{tabularx} }"
 msgid ""
 "\\hommtable[]{28}{ \\centering \\medskip \\textbf{Strength of Titans' "
 "Stronghold Armies}\\\\ \\bigskip \\newcommand{\\bronze}[0]{\\svg[12]"
 "{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} \\newcommand{\\golden}"
 "[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]{\\svg[12]{azure}} "
-"\\begin{tabularx}{\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Easy} & "
-"\\darkcell{Normal} & \\darkcell{Hard} & \\darkcell{Impossible}\\\\ "
-"\\darkcell[1.2]{1 player} & \\lightcell[1.2]{3\\bronze 2\\silver 1\\golden "
-"1\\azure} & \\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 1\\azure} & "
-"\\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 2\\azure} & \\lightcell[1.2]"
-"{1\\bronze 2\\silver 2\\golden 3\\azure}\\\\ \\darkcell[1.2]{2 players} & "
-"\\lightcell[1.2]{5\\bronze 5\\silver 3\\golden 1\\azure} & \\lightcell[1.2]"
-"{4\\bronze 5\\silver 3\\golden 2\\azure} & \\lightcell[1.2]{2\\bronze "
-"5\\silver 5\\golden 3\\azure} & \\lightcell[1.2]{1\\bronze 5\\silver "
-"7\\golden 4\\azure}\\\\ \\darkcell[1.8]{3 players} & \\lightcell[1.8]"
-"{8\\bronze 7\\silver 4\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze "
-"7\\silver 5\\golden 3\\azure} & \\lightcell[1.8]{2\\bronze 3\\silver "
-"4\\golden 3\\azure \\linebreak Then\\linebreak 2\\bronze 4\\silver 3\\golden "
-"2\\azure} & \\lightcell[1.8]{1\\bronze 3\\silver 5\\golden 3\\azure "
-"\\linebreak Then\\linebreak 1\\bronze 4\\silver 5\\golden 3\\azure}\\\\ "
-"\\darkcell[1.8]{4 players} & \\lightcell[1.8]{10\\bronze 10\\silver "
-"6\\golden 2\\azure} & \\lightcell[1.8]{8\\bronze 10\\silver 6\\golden "
-"4\\azure} & \\lightcell[1.8]{2\\bronze 5\\silver 5\\golden 3\\azure "
-"\\linebreak Then\\linebreak 2\\bronze 5\\silver 5\\golden 3\\azure} & "
-"\\lightcell[1.8]{1\\bronze 5\\silver 7\\golden 4\\azure \\linebreak "
-"Then\\linebreak 1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ \\darkcell[1.8]"
-"{5 players} & \\lightcell[1.8]{6\\bronze 6\\silver 4\\golden 1\\azure "
-"\\linebreak Then\\linebreak 7\\bronze 6\\silver 3\\golden 2\\azure} & "
-"\\lightcell[1.8]{5\\bronze 6\\silver 4\\golden 2\\azure \\linebreak "
-"Then\\linebreak 5\\bronze 6\\silver 4\\golden 3\\azure} & \\lightcell[1.8]"
-"{3\\bronze 6\\silver 6\\golden 4\\azure \\linebreak Then\\linebreak "
-"3\\bronze 6\\silver 6\\golden 4\\azure} & \\lightcell[1.8]{1\\bronze "
-"6\\silver 8\\golden 6\\azure \\linebreak Then\\linebreak 2\\bronze 6\\silver "
-"8\\golden 5\\azure}\\\\ \\darkcell[1.7]{6 players} & \\lightcell[1.8]"
-"{8\\bronze 8\\silver 4\\golden 1\\azure \\linebreak Then\\linebreak "
-"7\\bronze 7\\silver 5\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze "
-"8\\silver 4\\golden 3\\azure \\linebreak Then\\linebreak 6\\bronze 7\\silver "
-"5\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze 8\\silver 7\\golden "
-"5\\azure \\linebreak Then\\linebreak 3\\bronze 7\\silver 8\\golden 4\\azure} "
-"& \\lightcell[1.8]{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak "
-"Then\\linebreak 3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ "
-"\\end{tabularx} }"
+"\\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & "
+"\\darkcell{Easy} & \\darkcell{Normal} & \\darkcell{Hard} & "
+"\\darkcell{Impossible}\\\\ \\darkcell[1.2]{1 player} & \\lightcell[1.2]"
+"{3\\bronze 2\\silver 1\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze "
+"2\\silver 2\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze 2\\silver "
+"2\\golden 2\\azure} & \\lightcell[1.2]{1\\bronze 2\\silver 2\\golden "
+"3\\azure}\\\\ \\darkcell[1.2]{2 players} & \\lightcell[1.2]{5\\bronze "
+"5\\silver 3\\golden 1\\azure} & \\lightcell[1.2]{4\\bronze 5\\silver "
+"3\\golden 2\\azure} & \\lightcell[1.2]{2\\bronze 5\\silver 5\\golden "
+"3\\azure} & \\lightcell[1.2]{1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ "
+"\\darkcell[1.8]{3 players} & \\lightcell[1.8]{8\\bronze 7\\silver 4\\golden "
+"2\\azure} & \\lightcell[1.8]{6\\bronze 7\\silver 5\\golden 3\\azure} & "
+"\\lightcell[1.8]{2\\bronze 3\\silver 4\\golden 3\\azure \\linebreak "
+"Then\\linebreak 2\\bronze 4\\silver 3\\golden 2\\azure} & \\lightcell[1.8]"
+"{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak Then\\linebreak "
+"1\\bronze 4\\silver 5\\golden 3\\azure}\\\\ \\darkcell[1.8]{4 players} & "
+"\\lightcell[1.8]{10\\bronze 10\\silver\\linebreak 6\\golden 2\\azure} & "
+"\\lightcell[1.8]{8\\bronze 10\\silver 6\\golden 4\\azure} & \\lightcell[1.8]"
+"{2\\bronze 5\\silver 5\\golden 3\\azure \\linebreak Then\\linebreak "
+"2\\bronze 5\\silver 5\\golden 3\\azure} & \\lightcell[1.8]{1\\bronze "
+"5\\silver 7\\golden 4\\azure \\linebreak Then\\linebreak 1\\bronze 5\\silver "
+"7\\golden 4\\azure}\\\\ \\darkcell[1.8]{5 players} & \\lightcell[1.8]"
+"{6\\bronze 6\\silver 4\\golden 1\\azure \\linebreak Then\\linebreak "
+"7\\bronze 6\\silver 3\\golden 2\\azure} & \\lightcell[1.8]{5\\bronze "
+"6\\silver 4\\golden 2\\azure \\linebreak Then\\linebreak 5\\bronze 6\\silver "
+"4\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze 6\\silver 6\\golden "
+"4\\azure \\linebreak Then\\linebreak 3\\bronze 6\\silver 6\\golden 4\\azure} "
+"& \\lightcell[1.8]{1\\bronze 6\\silver 8\\golden 6\\azure \\linebreak "
+"Then\\linebreak 2\\bronze 6\\silver 8\\golden 5\\azure}\\\\ \\darkcell[1.7]"
+"{6 players} & \\lightcell[1.8]{8\\bronze 8\\silver 4\\golden 1\\azure "
+"\\linebreak Then\\linebreak 7\\bronze 7\\silver 5\\golden 2\\azure} & "
+"\\lightcell[1.8]{6\\bronze 8\\silver 4\\golden 3\\azure \\linebreak "
+"Then\\linebreak 6\\bronze 7\\silver 5\\golden 3\\azure} & \\lightcell[1.8]"
+"{3\\bronze 8\\silver 7\\golden 5\\azure \\linebreak Then\\linebreak "
+"3\\bronze 7\\silver 8\\golden 4\\azure} & \\lightcell[1.8]{3\\bronze "
+"7\\silver 11\\golden 6\\azure \\linebreak Then\\linebreak 3\\bronze "
+"8\\silver 10\\golden 6\\azure}\\\\ \\end{tabularx} }"
 msgstr ""
 "\\hommtable[]{28}{ \\centering \\medskip \\textbf{Force des armées dans la "
 "forteresse des titans}\\\\ \\bigskip \\newcommand{\\bronze}[0]{\\svg[12]"
 "{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} \\newcommand{\\golden}"
 "[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]{\\svg[12]{azure}} "
-"\\begin{tabularx}{\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Facile} "
-"& \\darkcell{Normal} & \\darkcell{Difficile} & \\darkcell{Impossible}\\\\ "
-"\\darkcell[1.2]{1 joueur} & \\lightcell[1.2]{3\\bronze 2\\silver 1\\golden "
-"1\\azure} & \\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 1\\azure} & "
-"\\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 2\\azure} & \\lightcell[1.2]"
-"{1\\bronze 2\\silver 2\\golden 3\\azure}\\\\ \\darkcell[1.2]{2 joueurs} & "
-"\\lightcell[1.2]{5\\bronze 5\\silver 3\\golden 1\\azure} & \\lightcell[1.2]"
-"{4\\bronze 5\\silver 3\\golden 2\\azure} & \\lightcell[1.2]{2\\bronze "
-"5\\silver 5\\golden 3\\azure} & \\lightcell[1.2]{1\\bronze 5\\silver "
-"7\\golden 4\\azure}\\\\ \\darkcell[1.8]{3 joueurs} & \\lightcell[1.8]"
-"{8\\bronze 7\\silver 4\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze "
-"7\\silver 5\\golden 3\\azure} & \\lightcell[1.8]{2\\bronze 3\\silver "
-"4\\golden 3\\azure \\linebreak Puis\\linebreak 2\\bronze 4\\silver 3\\golden "
-"2\\azure} & \\lightcell[1.8]{1\\bronze 3\\silver 5\\golden 3\\azure "
-"\\linebreak Puis\\linebreak 1\\bronze 4\\silver 5\\golden 3\\azure}\\\\ "
-"\\darkcell[1.8]{4 joueurs} & \\lightcell[1.8]{10\\bronze 10\\silver "
-"6\\golden 2\\azure} & \\lightcell[1.8]{8\\bronze 10\\silver 6\\golden "
-"4\\azure} & \\lightcell[1.8]{2\\bronze 5\\silver 5\\golden 3\\azure "
-"\\linebreak Puis\\linebreak 2\\bronze 5\\silver 5\\golden 3\\azure} & "
-"\\lightcell[1.8]{1\\bronze 5\\silver 7\\golden 4\\azure \\linebreak "
-"Puis\\linebreak 1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ \\darkcell[1.8]"
-"{5 joueurs} & \\lightcell[1.8]{6\\bronze 6\\silver 4\\golden 1\\azure "
-"\\linebreak Puis\\linebreak 7\\bronze 6\\silver 3\\golden 2\\azure} & "
-"\\lightcell[1.8]{5\\bronze 6\\silver 4\\golden 2\\azure \\linebreak "
-"Puis\\linebreak 5\\bronze 6\\silver 4\\golden 3\\azure} & \\lightcell[1.8]"
-"{3\\bronze 6\\silver 6\\golden 4\\azure \\linebreak Puis\\linebreak "
-"3\\bronze 6\\silver 6\\golden 4\\azure} & \\lightcell[1.8]{1\\bronze "
-"6\\silver 8\\golden 6\\azure \\linebreak Puis\\linebreak 2\\bronze 6\\silver "
-"8\\golden 5\\azure}\\\\ \\darkcell[1.7]{6 joueurs} & \\lightcell[1.8]"
-"{8\\bronze 8\\silver 4\\golden 1\\azure \\linebreak Puis\\linebreak "
-"7\\bronze 7\\silver 5\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze "
-"8\\silver 4\\golden 3\\azure \\linebreak Puis\\linebreak 6\\bronze 7\\silver "
-"5\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze 8\\silver 7\\golden "
-"5\\azure \\linebreak Puis\\linebreak 3\\bronze 7\\silver 8\\golden 4\\azure} "
-"& \\lightcell[1.8]{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak "
-"Puis\\linebreak 3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ "
-"\\end{tabularx} }"
+"\\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & "
+"\\darkcell{Facile} & \\darkcell{Normal} & \\darkcell{Difficile} & "
+"\\darkcell{Impossible}\\\\ \\darkcell[1.2]{1 joueur} & \\lightcell[1.2]"
+"{3\\bronze 2\\silver 1\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze "
+"2\\silver 2\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze 2\\silver "
+"2\\golden 2\\azure} & \\lightcell[1.2]{1\\bronze 2\\silver 2\\golden "
+"3\\azure}\\\\ \\darkcell[1.2]{2 joueurs} & \\lightcell[1.2]{5\\bronze "
+"5\\silver 3\\golden 1\\azure} & \\lightcell[1.2]{4\\bronze 5\\silver "
+"3\\golden 2\\azure} & \\lightcell[1.2]{2\\bronze 5\\silver 5\\golden "
+"3\\azure} & \\lightcell[1.2]{1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ "
+"\\darkcell[1.8]{3 joueurs} & \\lightcell[1.8]{8\\bronze 7\\silver 4\\golden "
+"2\\azure} & \\lightcell[1.8]{6\\bronze 7\\silver 5\\golden 3\\azure} & "
+"\\lightcell[1.8]{2\\bronze 3\\silver 4\\golden 3\\azure \\linebreak "
+"Puis\\linebreak 2\\bronze 4\\silver 3\\golden 2\\azure} & \\lightcell[1.8]"
+"{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak Puis\\linebreak "
+"1\\bronze 4\\silver 5\\golden 3\\azure}\\\\ \\darkcell[1.8]{4 joueurs} & "
+"\\lightcell[1.8]{10\\bronze 10\\silver 6\\golden 2\\azure} & \\lightcell[1.8]"
+"{8\\bronze 10\\silver 6\\golden 4\\azure} & \\lightcell[1.8]{2\\bronze "
+"5\\silver 5\\golden 3\\azure \\linebreak Puis\\linebreak 2\\bronze 5\\silver "
+"5\\golden 3\\azure} & \\lightcell[1.8]{1\\bronze 5\\silver 7\\golden "
+"4\\azure \\linebreak Puis\\linebreak 1\\bronze 5\\silver 7\\golden "
+"4\\azure}\\\\ \\darkcell[1.8]{5 joueurs} & \\lightcell[1.8]{6\\bronze "
+"6\\silver 4\\golden 1\\azure \\linebreak Puis\\linebreak 7\\bronze 6\\silver "
+"3\\golden 2\\azure} & \\lightcell[1.8]{5\\bronze 6\\silver 4\\golden "
+"2\\azure \\linebreak Puis\\linebreak 5\\bronze 6\\silver 4\\golden 3\\azure} "
+"& \\lightcell[1.8]{3\\bronze 6\\silver 6\\golden 4\\azure \\linebreak "
+"Puis\\linebreak 3\\bronze 6\\silver 6\\golden 4\\azure} & \\lightcell[1.8]"
+"{1\\bronze 6\\silver 8\\golden 6\\azure \\linebreak Puis\\linebreak "
+"2\\bronze 6\\silver 8\\golden 5\\azure}\\\\ \\darkcell[1.7]{6 joueurs} & "
+"\\lightcell[1.8]{8\\bronze 8\\silver 4\\golden 1\\azure \\linebreak "
+"Puis\\linebreak 7\\bronze 7\\silver 5\\golden 2\\azure} & \\lightcell[1.8]"
+"{6\\bronze 8\\silver 4\\golden 3\\azure \\linebreak Puis\\linebreak "
+"6\\bronze 7\\silver 5\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze "
+"8\\silver 7\\golden 5\\azure \\linebreak Puis\\linebreak 3\\bronze 7\\silver "
+"8\\golden 4\\azure} & \\lightcell[1.8]{3\\bronze 7\\silver 11\\golden "
+"6\\azure \\linebreak Puis\\linebreak 3\\bronze 8\\silver 10\\golden "
+"6\\azure}\\\\ \\end{tabularx} }"
 
 #. type: center
 #: coops/titans_stronghold.tex:195
