--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -114,7 +114,7 @@ If no player has achieved an immediate victory, the player with the most Victory
 
 After visiting a Dragon Utopia, roll an Attack Die:
 \begin{itemize}
-  \item[\textbf{-1}] -- Dragons' Curse: The defeated Dragons’ spirits curse the land! All players lose 1 \svgeven{movement} for the next Round.
+  \item[\textbf{-1}] -- Dragons' Curse: The defeated Dragons’ spirits curse the land! All Heroes lose \mbox{1 \svgeven{movement}} for the next Round.
   \item[\textbf{0}] -- Dragons' Revenge: All players must sacrifice a Unit before the end of the Round; that Unit's health is reduced to 0. 
   \item[ \textbf{+1}] -- Scattered Treasure: All players may immediately spend \mbox{1 \svgeven{movement}} to Search (2) the Artifact Deck.
 \end{itemize}
