--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -24,14 +24,14 @@ This Scenario plays out over 13 Rounds
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few of \svgunit{bronze} Units of the player's choice
-  \item A Pack of \svgunit{bronze} Units of the player's choice
+  \item 2 × Few \svgunit{bronze} Units of the highest recruitment cost
+%  \item A Pack of \svgunit{bronze} Units of the lowest recruitment cost
 \end{itemize}
 
 \textbf{Town Buildings:}
 \begin{itemize}
   \item \svgunit{bronze} Dwelling
-  \item Each player may build the the \svg{building_special_tent} building with a discount of 4 \svg{gold} and 2 \svg{building_materials}.
+  \item Each player may build the \svg{building_special_tent} building with a discount of 4 \svg{gold} and 2 \svg{building_materials}. %"Before the start" - is included in "Player Setup - town buildings". Could be added "Before start each player may..."
 \end{itemize}
 
 \subsection*{\MakeUppercase{Map Setup}}
@@ -83,7 +83,7 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item[\textbf{\nth{4}}] \textbf{Round:} Remove Black Cubes from all locations that give Resources, Morale or Cards (but not from the Grail).
   \item[\textbf{\nth{8}}] \textbf{Round:} Repeat event of Round 4.
   \item[\textbf{\nth{9}}] \textbf{Round:} Repeat event of Round 1.
-  \item[\textbf{End}] \textbf{of \nth{10} Round:} Player(s) with lowest XP roll 2 \svg{resource} dice.
+  \item[\textbf{End}] \textbf{of \nth{10} Round:} Player(s) with the lowest XP roll 2 \svg{resource} dice.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
@@ -99,13 +99,13 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item Obelisk effect: \textbf{once per Faction} roll one \svg{resource} and draw one Card.
   \item When fighting a Neutral Combat, a player may add +1 difficulty for an extra 5 \svg{gold} + Search (2) the Artifact or the Spell Deck.
   \item Settlements on Center (VI-VII) Map Tiles are treated as two Settlements in terms of rewards AND allow rolling one \svg{resource} or \svg{treasure} (reroll any XP).
-  \item Upon flagging a Grail Field, \textbf{choose one} and then put a Black Cube:
+  \item Upon flagging a Grail Field, \textbf{choose one} and then put a Black Cube: %or "After claiming a Grail Field, choose one and then place a Black Cube."
   \begin{itemize}
     \item Receive: 10 \svg{gold}, 4 \svg{building_materials}, and 2 \svg{valuables}.
     \item Roll 2 \svg{treasure} (reroll any XP) and 2 \svg{resource}.
   \end{itemize}
-  \item When visiting a Dragon Utopia: Reshuffle the \svgunit{golden} and \svgunit{azure} Decks, then draw from \svgunit{azure} until you get 3 Dragons and choose 2 (3 on impossible difficulty), AND draw from \svgunit{golden} until you get one Dragon.
-  \item Upon flagging Dragon Utopia, \textbf{choose one} and then put a Black Cube:
+  \item When visiting a Dragon Utopia: Reshuffle the \svgunit{golden} and \svgunit{azure} Decks, then draw from \svgunit{azure} until you get 3 Dragons and choose 2 (3 on impossible difficulty), AND draw from \svgunit{golden} Neutral Deck until you get one Dragon.
+  \item Upon flagging Dragon Utopia, \textbf{choose one} and then put a Black Cube: 
   \begin{itemize}
     \item Recruit one of the defeated Dragons for half its \svg{gold} (rounded down) and its \svg{valuables} cost.
     \item Receive 15 \svg{gold} AND Search (3) any Artifact Deck.
@@ -121,7 +121,7 @@ After visiting a Dragon Utopia, roll an Attack Die:
 
 \subsection*{\MakeUppercase{Suggested Houserules}}
 \begin{itemize}
-  \item Trading Posts - on a single visit, trade Resources and remove Cards, OR buy a War Machines.
+  \item Trading Posts - on a single visit, trade Resources and remove Cards, OR buy a War Machine. %"buy a war machine", or "buy war machines"?
 %  \item Fighting Neutral Units entails the following:
 %  \begin{itemize}
 %    \item No Combat Round limit
@@ -147,7 +147,7 @@ After visiting a Dragon Utopia, roll an Attack Die:
   % 4-player
   \node at (4, -15) {\includegraphics[scale=0.165]{\maps/dragon-valley-4p.png}};
   \node at (4, -20) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SCENARIO}}}};
-  % 4-player short
+  % 4-player short (This map layout is not yet balanced and ready, has to be tested out)
   \node at (13, -15) {\includegraphics[scale=0.165]{\maps/dragon-valley-4p-short.png}};
   \node at (13, -20) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER 9 ROUND SCENARIO}}}};
 \end{tikzpicture}
